syntax = "proto3";
package valvedgrpc;

option optimize_for = LITE_RUNTIME;
option go_package = "github.com/filariow/gardenia/pkg/valvedprotos";

service RosinaSvc {
    rpc OpenValve(OpenRequest) returns (OpenReply) {}
    rpc CloseValve(CloseRequest) returns (CloseReply) {}
}

message OpenRequest {
	uint64 Duration = 1;
}
message OpenReply {}

message CloseRequest {}
message CloseReply {}
